# w3.phoneme-extractor

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: un.yml  unzip.yml
data/: en.espeak.custom.dict  en.phoneme.similarity.csv  en.pocketsphinx.cfg  en.pocketsphinx.custom.dict  readme.1st.espeak-data.txt  readme.1st.pocketsphinx-data.txt
data/pocketsphinx/: readme.txt
espeak/: Cargo.toml
espeak-sys/: Cargo.toml  build.rs
espeak-sys/native/x86_64-windows/: espeak_lib.lib  msvc.x64.lib.patch  readme.txt
espeak-sys/src/: lib.rs
espeak/src/: lib.rs
imgui/imgui-controls/: Cargo.toml
imgui/imgui-controls/src/: filebrowser.rs  lib.rs  popup.rs
imgui/imgui-controls/src/graph/: actions.rs  layout.rs  mod.rs
imgui/imgui-controls/src/input/: mod.rs  validator.rs
imgui/imgui-rs/: .gitmodules  Cargo.toml
imgui/imgui-rs/imgui-sys/: Cargo.toml  build.rs
imgui/imgui-rs/src/: child_frame.rs  color_editors.rs  fonts.rs  input.rs  lib.rs  lists.rs  menus.rs  plothistogram.rs  plotlines.rs  progressbar.rs  sliders.rs  string.rs  trees.rs  window.rs
imgui/imgui-support/: Cargo.toml
imgui/imgui-support/src/: actions.rs  lib.rs  windows.rs
imgui/imgui-widgets/: Cargo.toml
imgui/imgui-widgets/src/: lib.rs
licenses-3rd-party/: DroidSansBold Fonts License.txt
logger/: Cargo.toml
logger/src/: ansi_console.rs  lib.rs  win_console.rs
pocketsphinx-rs/: Cargo.toml
pocketsphinx-rs/examples/: live.rs
pocketsphinx-rs/src/: config.rs  decoder.rs  endpointer.rs  fsg.rs  nbest_iter.rs  ngram.rs  seg_iter.rs  vad.rs
pocketsphinx-rs/sys/: build.rs  howto.generate-windows-bindings.txt  linux-checkout-pocketsphinx.sh
pocketsphinx-rs/sys/src/: lib.rs  (+1 more)
src/: actors.rs  audio.rs  espeak.rs  file_scanner.rs  lib.rs  matrix.rs  phonemes.rs  pocketsphinx.rs  queue.rs  sequence_matcher.rs  similarity_matrix.rs  text.rs  utils.rs
src/gui/: actors.rs  cmds.rs  help.rs  hotkeys.rs  mod.rs  phonemes.rs  player.rs  queue.rs  settings.rs  support.rs  update.rs  utils.rs  worker.rs
(+26 files in other folders)
